# wagateway-suite

./: NOTICE.md  README.md  RENDER_DEPLOYMENT.md  RENDER_DEPLOYMENT_NOTES.md  SETUP_SUMMARY.md  render.yaml  render_live_deployment_status.md
gateway/: .env.example  .env.minimal  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
gateway/dashboard/: README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
gateway/dashboard/src/: App.tsx
gateway/dashboard/src/hooks/: useRole.tsx  (+3 more)
gateway/docs/: 01-project-overview.md  02-requirements-specification.md  03-system-architecture.md  04-security-design.md  05-database-design.md  06-api-specification.md  07-api-collection.md  08-development-guidelines.md  09-testing-strategy.md  10-devops-infrastructure.md  11-operational-runbooks.md  12-troubleshooting-faq.md  13-horizontal-scaling.md  14-migration-guide.md  15-project-roadmap.md  16-risk-management.md  17-dashboard-design.md  18-sdk-design.md  19-plugin-architecture.md  20-community-guidelines.md  21-glossary.md  22-n8n-integration.md  README.md
gateway/scripts/: wagateway.sh
gateway/sdk/: README.md
gateway/sdk/javascript/: package.json
gateway/sdk/python/: pyproject.toml
gateway/sdk/python/wagateway/: __init__.py
gateway/src/: app.module.ts  main.ts
gateway/src/config/: configuration.ts
gateway/src/database/: data-source.ts
gateway/traefik/: dynamic.yml
n8n-nodes/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
n8n-nodes/src/: index.ts
(+25 files in other folders)
